fix typo in javadoc / sources README

--- a/bootstrap/README
+++ b/bootstrap/README
@@ -1,1 +1,1 @@
-Ocaml Java 3rd Party Jars will provider javadoc and sources in the near future.
+Ocaml Java 3rd Party Jars will provide javadoc and sources in the near future.
